Add benchmark tuning for mt19937

--- a/benchmark/tuning/CMakeLists.txt
+++ b/benchmark/tuning/CMakeLists.txt
@@ -40,6 +40,7 @@ add_executable(benchmark_rocrand_tuning
   benchmark_tuning_lfsr113.cpp
   benchmark_tuning_mrg31k3p.cpp
   benchmark_tuning_mrg32k3a.cpp
+  benchmark_tuning_mt19937.cpp
   benchmark_tuning_mtgp32.cpp
   benchmark_tuning_philox.cpp
   benchmark_tuning_threefry2x32_20.cpp
