--- a/test/parity/CMakeLists.txt
+++ b/test/parity/CMakeLists.txt
@@ -27,35 +27,33 @@ cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
 
 project(rocrand_parity_test CXX)
 
-if(NOT USE_HIP_CPU)
-    # CMake modules
-    list(APPEND CMAKE_PREFIX_PATH $ENV{ROCM_PATH} $ENV{ROCM_PATH}/hip)
-    list(APPEND CMAKE_MODULE_PATH
-        $ENV{ROCM_PATH}/lib/cmake/hip
-        ${HIP_PATH}/cmake $ENV{ROCM_PATH}/hip/cmake # FindHIP.cmake
-    )
-    # Find HIP
-    if(CMAKE_CXX_COMPILER MATCHES ".*/nvcc$" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-        find_package(hip QUIET CONFIG PATHS $ENV{ROCM_PATH})
-        if(NOT hip_FOUND)
-            find_package(HIP REQUIRED)
-            if((HIP_COMPILER STREQUAL "hipcc") AND (HIP_PLATFORM STREQUAL "nvcc"))
-            # TODO: The HIP package on NVIDIA platform is incorrect at few versions
-            set(HIP_COMPILER "nvcc" CACHE STRING "HIP Compiler" FORCE)
-            endif()
+# CMake modules
+list(APPEND CMAKE_PREFIX_PATH $ENV{ROCM_PATH} $ENV{ROCM_PATH}/hip)
+list(APPEND CMAKE_MODULE_PATH
+    $ENV{ROCM_PATH}/lib/cmake/hip
+    ${HIP_PATH}/cmake $ENV{ROCM_PATH}/hip/cmake # FindHIP.cmake
+)
+# Find HIP
+if(CMAKE_CXX_COMPILER MATCHES ".*/nvcc$" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    find_package(hip QUIET CONFIG PATHS $ENV{ROCM_PATH})
+    if(NOT hip_FOUND)
+        find_package(HIP REQUIRED)
+        if((HIP_COMPILER STREQUAL "hipcc") AND (HIP_PLATFORM STREQUAL "nvcc"))
+        # TODO: The HIP package on NVIDIA platform is incorrect at few versions
+        set(HIP_COMPILER "nvcc" CACHE STRING "HIP Compiler" FORCE)
         endif()
-    else()
-        find_package(hip REQUIRED CONFIG PATHS $ENV{ROCM_PATH})
     endif()
-
-    # Get HIP options
-    execute_process(
-        COMMAND ${HIP_HIPCONFIG_EXECUTABLE} --cpp_config
-        OUTPUT_VARIABLE HIP_CPP_CONFIG
-        OUTPUT_STRIP_TRAILING_WHITESPACE
-        ERROR_STRIP_TRAILING_WHITESPACE
-    )
+else()
+    find_package(hip REQUIRED CONFIG PATHS $ENV{ROCM_PATH})
 endif()
+
+# Get HIP options
+execute_process(
+    COMMAND ${HIP_HIPCONFIG_EXECUTABLE} --cpp_config
+    OUTPUT_VARIABLE HIP_CPP_CONFIG
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+    ERROR_STRIP_TRAILING_WHITESPACE
+)
 
 if(CMAKE_VERSION VERSION_LESS 3.17)
     find_package(CUDA REQUIRED)
@@ -90,13 +88,7 @@ target_link_libraries(test_rocrand_parity_curand ${CUDA_LIBRARIES} ${CUDA_curand
 # Create an object library for the rocrand part of the test.
 add_library(test_rocrand_parity_rocrand OBJECT parity_rocrand.cpp)
 
-if(USE_HIP_CPU)
-    target_link_libraries(test_rocrand_parity_rocrand
-        PRIVATE
-            roc::rocrand
-            hip_cpu_rt::hip_cpu_rt
-    )
-elseif(HIP_COMPILER STREQUAL "nvcc")
+if(HIP_COMPILER STREQUAL "nvcc")
     target_link_libraries(test_rocrand_parity_rocrand
         PRIVATE
             roc::rocrand
@@ -122,6 +114,3 @@ target_link_libraries(test_rocrand_parity
     test_rocrand_parity_curand
     test_rocrand_parity_rocrand
 )
-if(USE_HIP_CPU)
-    target_compile_definitions(test_rocrand_parity PRIVATE USE_HIP_CPU)
-endif()
