--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -134,6 +134,16 @@ copyright-date:
     - !reference [".deps:nvcc", before_script]
     - !reference [".deps:cmake-latest", before_script]
 
+.nvcc-clang:cmake-minimum:
+  variables:
+    COMPILER: clang++
+  extends:
+    - .deps:nvcc
+    - .deps:cmake-latest
+  before_script:
+    - !reference [".deps:nvcc", before_script]
+    - !reference [".deps:cmake-latest", before_script]
+
 .rocm:build:
   stage: build
   extends:
@@ -175,6 +185,7 @@ copyright-date:
       -B $CI_PROJECT_DIR/build
       -G Ninja
       -D CMAKE_CXX_COMPILER=${COMPILER}
+      -D CMAKE_CUDA_HOST_COMPILER=${COMPILER}
       -D BUILD_TEST=ON
       -D BUILD_BENCHMARK=ON
       -D BUILD_FORTRAN_WRAPPER=ON
@@ -269,6 +280,17 @@ build:nvcc-cmake-minimum:
   needs: []
   extends:
     - .nvcc:cmake-minimum
+    - .nvcc:build
+    - .save-artifacts
+  variables:
+    BUILD_SHARED_LIBS: "ON"
+
+build:nvcc-clang-cmake-minimum:
+  tags:
+    - build
+  needs: []
+  extends:
+    - .nvcc-clang:cmake-minimum
     - .nvcc:build
     - .save-artifacts
   variables:
