--- a/docs/sphinx/_toc.yml.in
+++ b/docs/sphinx/_toc.yml.in
@@ -5,6 +5,7 @@ subtrees:
   - entries:
     - file: installing
     - file: programmers-guide
+    - file: dynamic_ordering_configuration
     - file: what-is-rocrand
     - file: api-reference-home
       title: API reference
