build: Check for assembler .incbin support
If present this will be used to include binary content into the object
files faster.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,7 +78,9 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE CACHE BOOL "Add paths to linker searc
 set(BUILD_SHARED_LIBS ON CACHE BOOL "Build shared")
 
 # Include cmake scripts
-include(CMakeDependentOption)
+include(cmake/HaveASMIncbin.cmake)
+
+rocrand_check_have_asm_incbin(ROCRAND_HAVE_ASM_INCBIN)
 
 # Get dependencies
 include(cmake/Dependencies.cmake)
