build(tools): Inner loop for precompute_sobol_directions readability

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -50,22 +50,35 @@ rocrand_add_tool(xorwow_precomputed_generator xorwow_precomputed_generator.cpp)
 add_custom_target(precompute_sobol_directions)
 
 foreach(NAME IN ITEMS "sobol32" "sobol64")
-    add_custom_target(precompute_${NAME}_directions ${NAME}_direction_vector_generator
+    foreach(PREFIX IN ITEMS "" "scrambled_")
+        string(TOUPPER "${PREFIX}" PREFIX_UPPER)
+        set(INNER_NAME "${PREFIX}${NAME}")
+
+        set(${PREFIX_UPPER}DIRECTIONS_TARGET precompute_${INNER_NAME}_directions)
+        set(${PREFIX_UPPER}DIRECTIONS_EXE ${INNER_NAME}_direction_vector_generator)
+        set(${PREFIX_UPPER}SYMBOL rocrand_h_${INNER_NAME}_direction_vectors)
+        set(${PREFIX_UPPER}OUT_H
+            ${PROJECT_SOURCE_DIR}/library/include/rocrand/rocrand_${INNER_NAME}_precomputed.h)
+        set(${PREFIX_UPPER}OUT_BIN_NAME rocrand_${INNER_NAME}_precomputed.bin)
+        set(${PREFIX_UPPER}OUT_BIN
+            ${PROJECT_SOURCE_DIR}/library/src/${${PREFIX_UPPER}OUT_BIN_NAME})
+        set(${PREFIX_UPPER}NAME ${INNER_NAME})
+    endforeach()
+
+    add_custom_target(${DIRECTIONS_TARGET} ${DIRECTIONS_EXE}
         ${CMAKE_CURRENT_SOURCE_DIR}/direction_numbers.txt
-        rocrand_h_${NAME}_direction_vectors
-        ${PROJECT_SOURCE_DIR}/library/include/rocrand/rocrand_${NAME}_precomputed.h
-        ${PROJECT_SOURCE_DIR}/library/src/rocrand_${NAME}_precomputed.bin)
-    add_dependencies(precompute_${NAME}_directions ${NAME}_direction_vector_generator)
-    
-    set(SCRAMBLED_NAME scrambled_${NAME})
-    add_custom_target(precompute_${SCRAMBLED_NAME}_directions ${SCRAMBLED_NAME}_direction_vector_generator
-        ${PROJECT_SOURCE_DIR}/library/src/rocrand_${NAME}_precomputed.bin
-        rocrand_h_${SCRAMBLED_NAME}_direction_vectors
-        ${PROJECT_SOURCE_DIR}/library/include/rocrand/rocrand_${SCRAMBLED_NAME}_precomputed.h
-        ${PROJECT_SOURCE_DIR}/library/src/rocrand_${SCRAMBLED_NAME}_precomputed.bin)
-    add_dependencies(precompute_${SCRAMBLED_NAME}_directions
-        ${SCRAMBLED_NAME}_direction_vector_generator
-        precompute_${NAME}_directions)
+        ${SYMBOL}
+        ${OUT_H}
+        ${OUT_BIN})
+    add_dependencies(${DIRECTIONS_TARGET} ${DIRECTIONS_EXE})
+
+    add_custom_target(${SCRAMBLED_DIRECTIONS_TARGET} ${SCRAMBLED_DIRECTIONS_EXE}
+        ${OUT_BIN}
+        ${SCRAMBLED_SYMBOL}
+        ${SCRAMBLED_OUT_H}
+        ${SCRAMBLED_OUT_BIN})
+    add_dependencies(${SCRAMBLED_DIRECTIONS_TARGET}
+        ${SCRAMBLED_DIRECTIONS_EXE} ${DIRECTIONS_TARGET})
 
     if(NAME STREQUAL sobol32)
         set(SYMBOL_TYPE "unsigned int")
@@ -73,21 +86,23 @@ foreach(NAME IN ITEMS "sobol32" "sobol64")
         set(SYMBOL_TYPE "unsigned long long")
     endif()
 
-    foreach(INNER_NAME IN ITEMS ${NAME} ${SCRAMBLED_NAME})
+    foreach(PREFIX IN ITEMS "" "scrambled_")
+        string(TOUPPER "${PREFIX}" PREFIX_UPPER)
+        set(INNER_NAME "${PREFIX}${NAME}")
+
         add_custom_target(precompute_${INNER_NAME}_directions_asm ${CMAKE_COMMAND}
-            -DSYMBOL=rocrand_h_${INNER_NAME}_direction_vectors
-            -DINPUT_BIN=rocrand_${INNER_NAME}_precomputed.bin
+            -DSYMBOL=${${PREFIX_UPPER}SYMBOL}
+            -DINPUT_BIN=${${PREFIX_UPPER}OUT_BIN_NAME}
             -DOUTPUT=${PROJECT_SOURCE_DIR}/library/src/rocrand_${INNER_NAME}_precomputed.S
             -P ${CMAKE_CURRENT_LIST_DIR}/AsmEmbedSymbol.cmake)
 
         add_custom_target(precompute_${INNER_NAME}_directions_cpp bin2typed
-            ${PROJECT_SOURCE_DIR}/library/src/rocrand_${INNER_NAME}_precomputed.bin
-            rocrand_h_${INNER_NAME}_direction_vectors
+            ${${PREFIX_UPPER}OUT_BIN}
+            ${${PREFIX_UPPER}SYMBOL}
             ${SYMBOL_TYPE}
             ${PROJECT_SOURCE_DIR}/library/src/rocrand_${INNER_NAME}_precomputed.cpp)
         add_dependencies(precompute_${INNER_NAME}_directions_cpp
-            bin2typed
-            precompute_${INNER_NAME}_directions)
+                         bin2typed ${${PREFIX_UPPER}DIRECTIONS_TARGET})
     endforeach()
 
     add_dependencies(precompute_sobol_directions
