--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -58,6 +58,8 @@ function(add_test_target test_src is_internal)
   # nvcc/CUDA
   if(HIP_COMPILER STREQUAL "nvcc")
     set_source_files_properties(${test_name} PROPERTIES LANGUAGE CUDA)
+    # instantiation of tests in test_rocrand_cpp_wrapper.cpp exceeds the default template recursion depth
+    target_compile_options(${test_name} PRIVATE "--ftemplate-depth=500")
     if(is_internal)
       set_source_files_properties(${test_name} PROPERTIES CUDA_STANDARD 17)
       if(${CMAKE_VERSION} VERSION_LESS "3.18")
