--- a/.github/ISSUE_TEMPLATE/issue_report.yml
+++ b/.github/ISSUE_TEMPLATE/issue_report.yml
@@ -1,6 +1,5 @@
 name: Issue Report
-description: File a report for ROCm-related issues on Linux and Windows. For issues pertaining to documentation or non-bug related issues, 
-open a blank issue using the following template.
+description: File a report for ROCm related issues on Linux and Windows. For issues pertaining to documentation or non-bug related, please open a blank issue located below.
 title: "[Issue]: "
 
 body:
@@ -9,7 +8,7 @@ body:
     value: |
       Thank you for taking the time to fill out this report!
 
-      You can get your OS, CPU, and GPU details (required for completing out this report) using the following commands:
+      You can acquire your OS, CPU, GPU (for filling out this report) with the following commands:
 
       Linux:
         echo "OS:" && cat /etc/os-release | grep -E "^(NAME=|VERSION=)";
@@ -43,9 +42,12 @@ body:
 - type: dropdown
   attributes:
     label: GPU
-    description: What GPU(s) did you encounter the issue on (you can select multiple)?
+    description: What GPU(s) did you encounter the issue on (you can select multiple GPUs from the list)
     multiple: true
     options:
+        - AMD Instinct MI300
+        - AMD Instinct MI300A
+        - AMD Instinct MI300X
         - AMD Instinct MI250X
         - AMD Instinct MI250
         - AMD Instinct MI210
@@ -79,13 +81,14 @@ body:
 - type: input
   attributes:
     label: Other
-    description: If you selected Other, please specify.
+    description: If you selected Other, please specify
 - type: dropdown
   attributes:
     label: ROCm Version
     description: What version(s) of ROCm did you encounter the issue on?
     multiple: true
     options:
+        - ROCm 6.0.0
         - ROCm 5.7.1
         - ROCm 5.7.0
         - ROCm 5.6.0
@@ -96,105 +99,64 @@ body:
 - type: dropdown
   attributes:
     label: ROCm Component
-    description: (Optional) If this issue relates to a specific ROCm component, mention it here.
-    multiple: true
+    description: (Optional) If this issue relates to a specific ROCm component, it can be mentioned here.
     options:
-        - Other
-        - AMD Common Language Runtime
-        - AMD MIGraphX
-        - AMD System Management Interface
-        - amdgpu KCL/autoconf
-        - amdgpu Kernel-mode GPU Driver
-        - amdgpu-install
-        - AOMP
-        - AOMP Extras
-        - AqlProfile
-        - build-infra
-        - chelsio
-        - clang-ocl
-        - Composable Kernel
-        - dkms
-        - docker / ROCm-docker
-        - flang
-        - gpuburn
-        - half
-        - HIP
-        - HIP Examples
-        - hipBLAS
-        - hipBLASLt
-        - HIPCC
-        - hipCUB
-        - hip-examples-private
-        - hipFFT
-        - hipfort
-        - HIPIFY
-        - hipRAND
-        - hipSOLVER
-        - hipSPARSE
-        - hipSPARSELt
-        - hipTensor
-        - hip-tests
-        - HSA Runtime
-        - infrastructure
-        - jenkins-utils
-        - libdrm
-        - Linux BPI packaging framework
-        - llvm-project
-        - Mesa
-        - meta
-        - MIOpen
-        - MIVisionX
-        - ml-framework-ci
-        - MLSEQA_TestRepo
-        - OpenCL API C++ Bindings
-        - OpenCL API Headers
-        - OpenCL Conformance Test Suite
-        - OpenCL ICD Loader
-        - perftest-p2p
-        - prototype
-        - RCCL
-        - rccl-rdma-sharp-plugins
-        - rocALUTION
-        - rocBLAS
-        - ROCdbgapi
-        - ROCdebug-agent
-        - rocFFT
-        - ROCgdb
-        - ROCK
-        - ROCm Documentation/Website
-        - ROCm Data Center Tool
-        - ROCm Examples
-        - ROCm for Windows
-        - ROCm Performance Primitives
-        - ROCm System Management Interface Library
-        - ROCm Thrust
-        - ROCm Validation Suite
-        - rocm_bandwidth_test
-        - rocm-cmake
-        - rocm-core
-        - rocm-docs-core
-        - rocminfo
-        - rocMLIR
-        - rocmtools
-        - rocPRIM
-        - rocprofiler
-        - rocRAND
-        - ROCR-Runtime
-        - rocSOLVER
-        - rocSPARSE
-        - roctracer
-        - ROCT-Thunk-Interface
-        - rocWMMA
-        - Tensile
-        - umr
-        - ibv_rc_pingpong-amd
-        - mellanox
-        - mpitest
-        - Pytorch
-        - Tensorflow
-        - APEX
-        - torchvision
-        - Magma
+      - Other
+      - AMDMIGraphX
+      - amdsmi
+      - aomp
+      - aomp-extras
+      - clang-ocl
+      - clr
+      - composable_kernel
+      - flang
+      - half
+      - HIP
+      - hipBLAS
+      - HIPCC
+      - hipCUB
+      - HIP-Examples
+      - hipFFT
+      - hipfort
+      - HIPIFY
+      - hipSOLVER
+      - hipSPARSE
+      - hipTensor
+      - llvm-project
+      - MIOpen
+      - MIVisionX
+      - rccl
+      - rdc
+      - rocALUTION
+      - rocBLAS
+      - ROCdbgapi
+      - rocFFT
+      - ROCgdb
+      - ROCK-Kernel-Driver
+      - ROCm
+      - rocm_bandwidth_test
+      - rocm_smi_lib
+      - rocm-cmake
+      - ROCm-CompilerSupport
+      - rocm-core
+      - ROCm-Device-Libs
+      - rocminfo
+      - rocMLIR
+      - ROCmValidationSuite
+      - rocPRIM
+      - rocprofiler
+      - rocr_debug_agent
+      - rocRAND
+      - ROCR-Runtime
+      - rocSOLVER
+      - rocSPARSE
+      - rocThrust
+      - roctracer
+      - ROCT-Thunk-Interface
+      - rocWMMA
+      - rpp
+      - Tensile
+    default: 45
 - type: textarea
   attributes:
     label: Steps to Reproduce
@@ -205,13 +167,13 @@ body:
 - type: textarea
   attributes:
     label: (Optional for Linux users) Output of /opt/rocm/bin/rocminfo --support
-    description: The output of `rocminfo --support` could help to better address the problem.
+    description: The output of rocminfo --support could help to better address the problem.
   validations:
     required: false
 
 - type: textarea
   attributes:
     label: Additional Information
-    description: (Optional) Any additional information that is relevant; e.g., environment variables, Dockerfiles, log files, dmesg output (on Linux), etc.
+    description: (Optional) Any additional information that is relevant, e.g. relevant environment variables, dockerfiles, log files, dmesg output (on Linux), etc.
   validations:
     required: false
