--- a/docs/sphinx/_toc.yml.in
+++ b/docs/sphinx/_toc.yml.in
@@ -7,3 +7,6 @@ subtrees:
     - file: programmers_guide
     - file: cpp_api
     - file: python_api
+  - caption: About
+    entries:
+    - file: license
