--- a/docs/.sphinx/_toc.yml.in
+++ b/docs/.sphinx/_toc.yml.in
@@ -3,7 +3,11 @@
 root: index
 subtrees:
   - entries:
+    - file: what-is-rocrand
     - file: installing
-    - file: programmers_guide
-    - file: cpp_api
-    - file: python_api
+    - file: programmers-guide
+    - title: API reference
+      subtrees:
+      - entries:
+        - file: cpp-api
+        - file: python-api
